ingress/ingress-rules-besu.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: besu-ingress-routes
  namespace: quorum
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite (?i)/kibana/(.*) /$1 break;
      rewrite (?i)/kibana$ / break;
    nginx.ingress.kubernetes.io/rewrite-target: /
    #nginx.ingress.kubernetes.io/whitelist-source-range: w.x.y.z/32,a.b.c.d/32

spec:
  tls:
    - hosts:
      - poa.ampnet.io
      secretName: tls-secret
  ingressClassName: nginx
  rules:
    - host: poa.ampnet.io
      http:
        paths:
          - path: /rpc
            pathType: Prefix
            backend:
              service:
                name: besu-node-validator-1
                port:
                  number: 8545
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: besu-node-validator-1
                port:
                  number: 8546
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blockscout
                port:
                  number: 4000
